--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/nav_graph.xml">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph.xml"
+    app:startDestination="@id/nav_main">
 
     <fragment
         android:id="@+id/nav_main"
-        android:name="com.example.imgcreater.view.fragment.MainFragment" />
+        android:name="com.example.imgcreater.view.fragment.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main"/>
 
     <fragment
         android:id="@+id/nav_history"
-        android:name="com.example.imgcreater.view.fragment.HistoryFragment" />
+        android:name="com.example.imgcreater.view.fragment.HistoryFragment"
+        android:label="fragment_history"
+        tools:layout="@layout/fragment_history" />
+    <fragment
+        android:id="@+id/resultFragment"
+        android:name="com.example.imgcreater.view.fragment.ResultFragment"
+        android:label="fragment_result"
+        tools:layout="@layout/fragment_result" />
 </navigation>
