--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,16 +9,26 @@
         android:id="@+id/nav_main"
         android:name="com.example.imgcreater.view.fragment.MainFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main"/>
+        tools:layout="@layout/fragment_main">
+        <action
+            android:id="@+id/action_nav_main_to_resultFragment"
+            app:destination="@id/resultFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_history"
         android:name="com.example.imgcreater.view.fragment.HistoryFragment"
         android:label="fragment_history"
         tools:layout="@layout/fragment_history" />
+
     <fragment
         android:id="@+id/resultFragment"
         android:name="com.example.imgcreater.view.fragment.ResultFragment"
         android:label="fragment_result"
-        tools:layout="@layout/fragment_result" />
+        tools:layout="@layout/fragment_result" >
+
+        <action
+            android:id="@+id/action_resultFragment_to_nav_main"
+            app:popUpTo="@id/nav_main"/>
+    </fragment>
 </navigation>
